# BasicCMake

./: .gitignore  CMakeIntroduction.rc.in  CMakeLists.txt  README.md  resource.h
HelloCMake/: CMakeLists.txt
HelloCMake/source/: HelloCMake.cpp  HelloCMake.h
LibraryUsage/: CMakeLists.txt
LibraryUsage/StaticAndSharedLibrary/: CMakeLists.txt
LibraryUsage/StaticAndSharedLibrary/source/: StaticAndSharedLibrary.cpp  StaticAndSharedLibrary.h  StaticAndSharedLibrary_EXPORTS.h
LibraryUsage/source/: LibraryUsage.cpp
StaticAndSharedLibrary/: CMakeLists.txt
